--- a/about.css
+++ b/about.css
@@ -220,7 +220,7 @@ body {
 
 .modal-caption {
     font-size: 18px;
-    color: #FFC700; /* Highlight color */
+    color: #F52929; /* Highlight color */
     font-weight: 600;
 }
 
